Cleaned up type to string representation