@@ -51,6 +51,6 @@ public record Position(int line, int column)
 
     @Override
     public String toString() {
-        return Objects.requireNonNull(String.format("%d:%d", line(), column()));
+        return Objects.requireNonNull("%d:%d".formatted(line(), column()));
     }
 }
