@@ -3,6 +3,6 @@ package com.github.andreasarvidsson.eld.semantic;
 public record ArrayType(Type elementType) implements Type {
     @Override
     public String toString() {
-        return String.format("ArrayType<%s>", elementType);
+        return "[%s]".formatted(elementType);
     }
 }
