@@ -1,7 +1,5 @@
 package com.github.andreasarvidsson.eld.semantic;
 
-import java.util.Objects;
-
 import com.github.andreasarvidsson.eld.Range;
 import com.github.andreasarvidsson.eld.parser.IdentifierDeclaration;
 
@@ -21,13 +19,13 @@ public record FunctionSymbol(
 
     @Override
     public String toString() {
-        return Objects.requireNonNull(
-            String.format(
-                "FunctionSymbol(name=%s, parameterTypes=%s, returnType=%s)",
-                name(),
-                type.parameterTypes(),
-                type.returnType()
-            )
+        return "%s(%s) => %s".formatted(
+            name(),
+            type.parameterTypes()
+                .stream()
+                .map(Object::toString)
+                .collect(java.util.stream.Collectors.joining(", ")),
+            type.returnType()
         );
     }
 }
